--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -71,28 +71,29 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  /* box-sizing: border-box; */
+  padding: 0px;
+  margin: 0px;
 }
-
-/* html,
+/* 
+html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-} */
+  margin: 0px
+}
 
 body {
   color: rgb(var(--foreground-rgb));
-  /* background: linear-gradient(
+ background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb)); */
+    rgb(var(--background-start-rgb));
 }
 
 a {
@@ -104,4 +105,9 @@ a {
   html {
     color-scheme: dark;
   }
+} */
+
+
+:root {
+  
 }
