--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -1,16 +1,18 @@
+
 .headerBack{
     background-color: rgb(49, 166, 184);
     
-    margin-left: 0;
+    margin-left: -10px;
     margin-right: 0px;
-    margin-top: 0px;
+    margin-top: -10px;
     width: 100vw;
-    height: 100px
+    height: 100px;
    
 }
 
 .opcoesMenu{
     display: flex;
+    
 }
 .opcoesMenu h2{
     margin: 15px
