--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,7 +107,35 @@ a {
   }
 } */
 
-
 :root {
-  
+  --primaryTom1-color: #55ACEE;
+  --primaryTom2-color: #A0D2F8;
+  --primaryTom3-color: #E5F4FF;
+
+  --primaryTom1-color1: #EE6755;
+  --primaryTom2-color1: #FDD7D2;
+  --primaryTom3-color1: #FBECEA;
+
+  --primaryTom1-color2: #EEE855;
+  --primaryTom2-color2: #FEFFC3;
+  --primaryTom3-color2: #FBF9EA;
+
+  --secundaryTom1-color3: #469444;
+  --secundaryTom2-color3: #9EC69D;
+  --secundaryTom3-color3: #E8F4E7;
+
+  --neutraTom1-color4: #2F2F2F;
+  --neutraTom2-color4: #4A4747;
+  --neutraTom3-color4: #A4A4A4;
+
+
+
+
+  --body-fonts: "Helvetica", "Arial", sans-serif;
+  --fontPadrao: "Manrope", sans-serif;
+  --fontSizeTitulo: 36px;
+  --fontSizeSubtitulo: 24px;
+  --fontSizeMenu: 12px;
+ 
+
 }
