--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -1,5 +1,5 @@
 
-.headerBack{
+/* .headerBack{
     
     margin-left: -10px;
     margin-right: 0px;
@@ -11,10 +11,10 @@
     padding-left: 0px;
    
     box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
-    /* border-bottom: 3px solid; */
+   
 
     background: linear-gradient(white, white) padding-box, linear-gradient(to right, #469444, #0be6e6, #55ACEE) border-box;
-	/* border-radius: 50em; */
+	
 	border: 3px solid transparent;
 	position: relative;
 	display: inline-flex;
@@ -27,6 +27,23 @@
 	padding: 0.5em 1.5em;
 	cursor: pointer;
    
+} */
+
+.headerBack{
+    background: linear-gradient(white, white) padding-box, linear-gradient(to right, #469444, #0be6e6, #55ACEE) border-box;
+    border: 3px solid transparent;
+    position: relative;
+	margin-top: -10px;
+    height: 80px;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.2em;
+	font-weight: bold;
+	text-decoration: none;
+    width: 100vw;
+	padding: 0.5em 1.5em; 
+	
+    
 }
 
 .divlogotipo{
@@ -45,7 +62,7 @@
     margin-bottom: 0px
 }
 
-.opcoesMenu .h2Tit{
+/* .opcoesMenu .h2Tit{
     margin: 10px;
     font-family: var(--fontPadrao);
     font-size: var(--fontSizeMenu);
@@ -72,5 +89,25 @@
     font-family: var(--fontPadrao);
     font-size: var(--fontSizeMenu);
     text-decoration: none;
+    
+}
+
+.corfont{
+    color: red
+} */
+.h2Menu{
+    color: green
+}
+
+.h2Tit{
+   
+    font-family: var(--fontPadrao);
+    text-decoration: none;
+    color: var(--secundaryTom1-color3)
+    
+}
+.h2Tit:hover{
+   
+    color: var(--primaryTom1-color);
     
 }
