--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,24 +78,27 @@
   padding: 0px;
   margin: 0px;
 }
-/* 
-html,
+
+/* html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0px
-}
+} */
 
 body {
-  color: rgb(var(--foreground-rgb));
+  background-image: linear-gradient(#E5F4FF, #fff);
+  height: 101vh
+  /* color: rgb(var(--foreground-rgb));
+  
  background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
-
+/*
 a {
   color: inherit;
   text-decoration: none;
