--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -42,7 +42,7 @@
 	text-decoration: none;
     width: 100vw;
 	padding: 0.5em 1.5em; 
-	
+    box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
     
 }
 
