--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -47,7 +47,8 @@
 }
 
 .navContain{
-    margin-left: 85px !important
+    margin-left: 85px !important;
+    max-width: 100% !important
 }
 .NavMenuOp{
 
