--- a/src/components/cards/cardHome/cards.module.css
+++ b/src/components/cards/cardHome/cards.module.css
@@ -15,7 +15,7 @@
     box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
     background: linear-gradient(#55ACEE , #469444) padding-box, linear-gradient(to right, #55ACEE, #469444) border-box;
     border: 3.5px solid transparent;
-    cursor: pointer;
+    
 }
 
 .card:hover{
@@ -27,7 +27,7 @@
     box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
     background: linear-gradient(#2e5e82 , #1b371a) padding-box, linear-gradient(to right, #55ACEE, #469444) border-box;
     border: 3.5px solid transparent;
-    cursor: pointer;
+   
 }
 
 .IconeCard{
@@ -46,6 +46,17 @@
    margin: auto;
    font-weight: bold;
    justify-content: center;
+   font-family: var(--fontPadrao);
+}
+
+.card:hover{
+    color:#fff
+
+}
+.card:hover .InfoCard{
+    color:#55ACEE;
+    cursor: pointer
+
 }
 
 
@@ -54,7 +65,7 @@
     font-size: 1.3rem;
     display: flex;
     justify-content: center;
-   
+    font-family: var(--fontPadrao);
 }
 
 .botaoCard{
