--- a/src/components/cards/cardLogin/cardlogin.module.css
+++ b/src/components/cards/cardLogin/cardlogin.module.css
@@ -58,3 +58,33 @@
     
     
 }
+
+.imgMundo{
+    width: 350px;
+    height: 350px;
+    margin: auto
+   
+}
+
+.BotaoEntrar{
+--bs-btn-bg: #55ACEE !important;
+--bs-btn-border-color: #55ACEE !important;
+--bs-btn-hover-color: #fff !important;
+--bs-btn-hover-bg: #0b5ed7 !important;
+--bs-btn-hover-border-color: #0a58ca !important;
+
+}
+
+.EsqueciSen{
+    justify-content: end;
+    display: grid;
+    color: gray;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.EsqueciSen:hover{
+    text-decoration: underline;
+    margin-right: 5px;
+   
+}
