--- a/src/components/cards/cardLogin/cardlogin.module.css
+++ b/src/components/cards/cardLogin/cardlogin.module.css
@@ -77,9 +77,10 @@
 }
 
 .logo{
-    width: 200px;
-    height: 40px;
+    width: 150px;
+    height: 30px;
     margin-left: 5px;
+    margin-top: 10px;
    
 
 }
