--- a/src/components/cards/cardLogin/cardlogin.module.css
+++ b/src/components/cards/cardLogin/cardlogin.module.css
@@ -46,9 +46,9 @@
 
 .Formulario{
    
-    width: 70%;
+    width: 80%;
     margin-inline-start: auto;
-    margin-right: 5px;
+    margin-right: 15px;
 }
 
 .DivCorpoCard{
@@ -91,6 +91,8 @@
 --bs-btn-hover-color: #fff !important;
 --bs-btn-hover-bg: #0b5ed7 !important;
 --bs-btn-hover-border-color: #0a58ca !important;
+display: flex !important;
+margin-inline-start: auto !important;
 
 }
 
