--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -1,34 +1,4 @@
 
-/* .headerBack{
-    
-    margin-left: -10px;
-    margin-right: 0px;
-    margin-top: -10px;
-    width: 100vw;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    padding-left: 0px;
-   
-    box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
-   
-
-    background: linear-gradient(white, white) padding-box, linear-gradient(to right, #469444, #0be6e6, #55ACEE) border-box;
-	
-	border: 3px solid transparent;
-	position: relative;
-	display: inline-flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 1.2em;
-	font-weight: bold;
-	text-decoration: none;
-	
-	padding: 0.5em 1.5em;
-	cursor: pointer;
-   
-} */
-
 .headerBack{
     background: linear-gradient(white, white) padding-box, linear-gradient(to right, #469444, #0be6e6, #55ACEE) border-box;
     border: 3.5px solid transparent;
@@ -42,7 +12,7 @@
 	font-size: 1.2em;
 	font-weight: bold;
 	text-decoration: none;
-    width: 100vw;
+    /* width: 100vw; */
 	padding: 0.5em 1.5em; 
     box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
     
