--- a/src/pages/usuarios/listaUsuario/listauser.module.css
+++ b/src/pages/usuarios/listaUsuario/listauser.module.css
@@ -63,8 +63,13 @@ margin-top: 100px
     margin: auto;
 }
 
+.DropMENU{
+    margin-inline-start: auto;
+    display: flex
+}
+
 .IconeMENU{
-    margin-top: 20px;
+    
     --bs-btn-bg: none;
     --bs-btn-border-color: none;
     --bs-btn-hover-color: none;
@@ -74,9 +79,7 @@ margin-top: 100px
     --bs-btn-hover-bg: none;
 }
 
-.IconeMENU:hover .Icon{
-    color: var(--primaryTom1-color)
-}
+
 .IconeDrop{
     width: 20px;
     height: 20px;
