--- a/src/components/cards/cardCadUser/card.module.css
+++ b/src/components/cards/cardCadUser/card.module.css
@@ -32,3 +32,11 @@
     display: flex;
     height: 40px
 }
+
+.botaoCarregamento{
+    display: flex;
+    width: 50%;
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+}
