Atualiza versao alerta fixado

--- a/src/components/cards/cardCadUser/card.module.css
+++ b/src/components/cards/cardCadUser/card.module.css
@@ -34,9 +34,9 @@
 }
 
 .botaoCarregamento{
-    display: flex;
+    display: block;
     width: 50%;
-    position: absolute;
+    position: fixed;
     bottom: 0%;
     right: 0%;
 }
