--- a/src/components/cards/cardCadUser/card.module.css
+++ b/src/components/cards/cardCadUser/card.module.css
@@ -20,11 +20,11 @@
 .BotaoCad{
 
 --bs-btn-color: #fff;
---bs-btn-bg: #469444;
---bs-btn-border-color: #469444;
+--bs-btn-bg: #55ACEE;
+--bs-btn-border-color: #55ACEE;
 --bs-btn-hover-color: #fff;
---bs-btn-hover-bg: #31662f;
---bs-btn-hover-border-color: #31662f;
+--bs-btn-hover-bg: #427fad;
+--bs-btn-hover-border-color: #427fad;
 
 }
 
