--- a/src/pages/usuarios/listaUsuario/listauser.module.css
+++ b/src/pages/usuarios/listaUsuario/listauser.module.css
@@ -102,3 +102,28 @@ margin-top: 100px
     display: flex;
     margin-left: 10%
 }
+
+
+
+/* =================================Responsividade===================================== */
+@media (max-width: 800px) {
+     
+    .Tabela th:nth-child(2),
+    .Tabela td:nth-child(2) {
+    display: none;
+    }
+    .Tabela th:nth-child(4),
+    .Tabela td:nth-child(4) {
+    display: none;
+    }
+    .headerTabela{
+        width: 100%;
+    }
+    .Tabela{
+        width: 100%;
+    }
+     /* &:nth-child(0){
+        display: none
+    } */
+  
+}
