--- a/src/components/modals/modalpapel/modalpapel.module.css
+++ b/src/components/modals/modalpapel/modalpapel.module.css
@@ -12,3 +12,10 @@
     background-color: #295527;
     --bs-btn-border-color: #469444
 } */
+.botaoCarregamento{
+    display: block;
+    width: 50%;
+    position: fixed;
+    bottom: 0%;
+    right: 0%;
+}
