Atualiza versao spinner loadding

--- a/src/components/cards/cardLogin/cardlogin.module.css
+++ b/src/components/cards/cardLogin/cardlogin.module.css
@@ -138,3 +138,10 @@ margin-inline-start: auto !important;
     margin-right: 5px;
    
 }
+
+.SpinnerLoadding{
+    display: flex;
+    width: 100px;
+    height: 100px;
+    margin: auto; 
+}
