--- a/src/components/cards/cardLogin/cardlogin.module.css
+++ b/src/components/cards/cardLogin/cardlogin.module.css
@@ -139,9 +139,18 @@ margin-inline-start: auto !important;
    
 }
 
+.DivSpinnerLoadding{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #2b2a2a;
+    opacity: 0.4;
+    margin: auto; 
+    position: absolute;
+    top: 0px
+}
 .SpinnerLoadding{
     display: flex;
-    width: 100px;
-    height: 100px;
     margin: auto; 
+    position: absolute
 }
