--- a/src/components/cards/cardConfigTela/tela.module.css
+++ b/src/components/cards/cardConfigTela/tela.module.css
@@ -3,6 +3,9 @@
     text-align: center;
     margin: auto;
 }
+.Corpo{
+    background-image: linear-gradient(#E5F4FF, #fff);
+}
 .modelos{
     display: flex;
     margin: auto;
@@ -13,6 +16,43 @@
     /* justify-content: space-between; */
 }
 
-.Card{
-    margin: 20px;
+.Card1{
+    margin: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.Card1:hover{
+    border: solid 1px transparent;
+    box-shadow: 0px 0px 5px 5px #e8e6e6;
+    scale: 1.1;
+    transition: 0.3s;
+
+}
+.Card2{
+    margin: 10px;
+}
+/*----------------------- Card1 ----------------------*/
+.Titulo1{
+    color: #469444;
+
+}
+.Item1{
+    color: #fff ;
+    background-color: #EE6755
+}
+.Item2{
+    color: #fff;
+    background-color: #9EC69D
+}
+.Item3{
+    color: #ffffff;
+    background-color: #55ACEE
+}
+
+.Link1{
+    margin-right: 20px;
+}
+.Link1:hover{
+    margin-right: 20px;
+    cursor: pointer
 }
