--- a/src/components/cards/cardConfigTela/tela.module.css
+++ b/src/components/cards/cardConfigTela/tela.module.css
@@ -3,9 +3,7 @@
     text-align: center;
     margin: auto;
 }
-.Corpo{
-    background-image: linear-gradient(#E5F4FF, #fff);
-}
+
 .modelos{
     display: flex;
     margin: auto;
@@ -16,6 +14,11 @@
     /* justify-content: space-between; */
 }
 
+
+/*----------------------- Card1 ----------------------*/
+.Corpo1{
+    background-image: linear-gradient(#E5F4FF, #fff);
+}
 .Card1{
     margin: 10px;
     cursor: pointer;
@@ -28,10 +31,6 @@
     transition: 0.3s;
 
 }
-.Card2{
-    margin: 10px;
-}
-/*----------------------- Card1 ----------------------*/
 .Titulo1{
     color: #469444;
 
@@ -45,6 +44,48 @@
     background-color: #9EC69D
 }
 .Item3{
+    color: #ffffff;
+    background-color: #55ACEE
+}
+
+.Link1{
+    margin-right: 20px;
+}
+.Link1:hover{
+    margin-right: 20px;
+    cursor: pointer
+}
+
+
+/*----------------------- Card2 ----------------------*/
+.Corpo2{
+    background-image: linear-gradient(#0b6aad, #fff);
+}
+.Card2{
+    margin: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.Card2:hover{
+    border: solid 1px transparent;
+    box-shadow: 0px 0px 5px 5px #e8e6e6;
+    scale: 1.1;
+    transition: 0.3s;
+
+}
+.Titulo2{
+    color: #469444;
+
+}
+.Item4{
+    color: #fff ;
+    background-color: #EE6755
+}
+.Item5{
+    color: #fff;
+    background-color: #9EC69D
+}
+.Item6{
     color: #ffffff;
     background-color: #55ACEE
 }
