--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,7 +131,9 @@ a {
 
   --neutraTom1-color4: #2F2F2F;
   --neutraTom2-color4: #4A4747;
-  --neutraTom3-color4: #A4A4A4;
+  --neutraTom3-color4: #424B51;
+  --neutraTom4-color4: #A4A4A4;
+  
 
 
 
