--- a/src/components/cards/cardConfigTela/tela.module.css
+++ b/src/components/cards/cardConfigTela/tela.module.css
@@ -62,6 +62,9 @@
 .Corpo2{
     background-color: #2F2F2F;
 }
+.Corpo2_1{
+    background-color: #424B51;
+}
 .Card2{
     margin: 10px;
     cursor: pointer;
