--- a/src/components/cards/cardConfigTela/tela.module.css
+++ b/src/components/cards/cardConfigTela/tela.module.css
@@ -15,6 +15,10 @@
     /* justify-content: space-between; */
 }
 
+.botaoStilo{
+    margin: 10px
+}
+
 
 /*----------------------- Card1 ----------------------*/
 .Corpo1{
