--- a/src/components/cards/cardHome/cards.module.css
+++ b/src/components/cards/cardHome/cards.module.css
@@ -3,12 +3,13 @@
     margin: auto;
     width: 100%;
     justify-content: center;
-    margin-top: 120px
+    margin-top: 120px;
+    flex-wrap: wrap
     
 }
 
 .card{
-    margin-left: 20px;
+    margin: 20px;
     width: 15rem;
     height: 20rem;
     background-image: linear-gradient( #55ACEE , #469444);
