--- a/src/components/cards/cardLogin/cardlogin.module.css
+++ b/src/components/cards/cardLogin/cardlogin.module.css
@@ -165,3 +165,39 @@ margin-inline-start: auto !important;
 /* .cardlogin{
     position: absolute !important;
 } */
+
+/* -----------------------------------Responsividade---------------------------- */
+@media (max-width: 990px) {
+     
+   .imgMundo{
+    display: none;
+    }
+    .DivForm {
+        width: 100%
+    }
+    .divFundo{
+        width: 80%;
+    }
+  
+}
+
+@media (max-width: 600px) {
+     
+    .BarraCard{
+        background-color: #ffffff;
+        margin-top: 20px;
+        width: 100%;
+       
+    }
+    .DivForm {
+        height: 408px
+    }
+    .logo{
+        display: flex;
+        margin: auto;
+    }
+    .divBarra{
+        height: 60px;
+    }
+    
+ }
