--- a/src/pages/configuracao/configure.module.css
+++ b/src/pages/configuracao/configure.module.css
@@ -2,3 +2,11 @@
     display: flex;
     margin-left: 10%
 }
+.TabsCorpo{
+    width: 80%;
+    margin: auto;
+
+}
+.TituloTab{
+    margin-left: 10%
+}
