--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -62,3 +62,8 @@
     margin-bottom: 15%;
     --fontPadrao: "Manrope", sans-serif;
 }
+@media (max-width: 797px){
+    .Sessao1{
+        display: none
+    }
+}
