--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -4,6 +4,7 @@
     margin-top: 20px;
 }
 
+
 .DivInternoTitutlos{
     margin-left: 20px;
     margin: auto;
@@ -73,12 +74,12 @@
     
 }
 
-.TextoArvoreEsquerdo2{
+/* .TextoArvoreEsquerdo{
     width: 70%;
     margin-top: 40px;
     
    
-}
+} */
 /* .logo{
     width: 500px;
     height: 500px;
@@ -139,3 +140,8 @@
         display: none
     }
 }
+
+  
+  
+  
+  
