Atualiza versao fundo floresta

--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -119,15 +119,31 @@
 } */
 
 .TituloArvore3{
-   margin-bottom: 15%;
-   color: #ffffff;
-   --fontPadrao: "Manrope", sans-serif;
-}
-.subTituloArvore3{
-    margin-bottom: 15%;
-    --fontPadrao: "Manrope", sans-serif;
+    letter-spacing: -15px;
+    font-family: Open Sans;
+    color: white;
+    text-align: center;
+    font-size: 200px;
+    font-weight: 800;
+    line-height: 200px;
 }
 
+
+.subTituloArvore3{
+    margin-bottom: 5%;
+    --fontPadrao: "Manrope", sans-serif;
+    color: #55ACEE;
+    /* margin-top: 60%; */
+    background-color:black;
+    padding: 10px
+}
+.TextoArvore3{
+   
+    color: #fff;
+    background-color:black;
+    padding: 10px
+}
+ 
 
 @media (max-width: 797px){
     .Sessao1{
@@ -141,6 +157,55 @@
     }
 }
 
+
+
+
+.h1 {
+    letter-spacing: -15px;
+    font-family: Open Sans;
+    color: white;
+    text-align: center;
+    font-size: 200px;
+    font-weight: 800;
+    line-height: 200px;
+  }
+  .MainContainer {
+    perspective: 1px;
+    transform-style: preserve-3d;
+    height: 80vh;
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+  .ContentContainer {
+    position: relative;
+    display: block;
+    background-color: white;
+    z-index: 1;
+  }
+  .Content {
+    max-width: 750px;
+    margin: 0 auto;
+    padding: 75px 0;
+  }
+  .p {
+    margin: 75px 0;
+  }
+  .ParallaxContainer {
+    display: flex;
+    flex: 1 0 auto;
+    position: relative;
+    z-index: -1;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    transform: translateZ(-1px) scale(2);
+    background: url(../../assets/images/fundo_floresta.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+    background-color: #fae4d8;
+  }
   
   
   
