--- a/src/components/cards/cardCadArvore/cadarvore.module.css
+++ b/src/components/cards/cardCadArvore/cadarvore.module.css
@@ -13,3 +13,11 @@
     width: 40%;
     margin: auto;
 }
+
+.botaoCarregamento{
+    display: block;
+    width: 50%;
+    position: fixed;
+    bottom: 0%;
+    right: 0%;
+}
