Atualiza versao nova cor header

--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -1,12 +1,11 @@
-
 .headerBack{
-    background: linear-gradient(white, white) padding-box, linear-gradient(to right, #469444, #0be6e6, #55ACEE) border-box;
+    background: linear-gradient(#1e1d1d,#1e1d1d) padding-box, linear-gradient(to right, #469444, #0be6e6, #55ACEE) border-box;
     border: 3.5px solid transparent;
     border-left: transparent;
     border-right: transparent;
     position: relative;
 	margin-top: -15px;
-    height: 80px;
+    height: 90px;
 	justify-content: center;
 	align-items: center;
 	font-size: 1.2em;
@@ -15,7 +14,7 @@
     /* width: 100vw; */
 	padding: 0.5em 1.5em; 
     box-shadow: 0 5px 5px -3px rgb(169, 169, 169);
-    /* position: fixed; */
+   
 }
 
 .navContain{
