--- a/src/components/cards/cardCadArvore/cadarvore.module.css
+++ b/src/components/cards/cardCadArvore/cadarvore.module.css
@@ -1,8 +1,15 @@
+.divCorpoArvore{
+    display: flex;
+    margin-top: 20px;
+}
 .cardArvore{
     text-align: center;
     width: 45vw;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 100px;
+    /* position: absolute;
+    justify-content: center;
+    display: flex; */
 }
 .estiloRadio{
     width: 70%;
