--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -9,7 +9,7 @@
     margin-left: 20px;
     margin: auto;
     text-align: center;
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 
 .tituloH2{
