--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -224,11 +224,11 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-origin: content-box;
-    background-color: #fae4d8;
+    background-color: #ffffff;
   }
 
 /* Sessão 4 */
 .Sessao4{
-    background-color:#e6e5e5;
+    background-color:#e9e9e9;
     height: 200px;
 }
