--- a/src/pages/arvores/listarArvores/listaarvores.module.css
+++ b/src/pages/arvores/listarArvores/listaarvores.module.css
@@ -58,7 +58,7 @@
     }
      
     .headerTabela{
-        background-color: #2F2F2F;
+        background-color: #9ec69d;
         width: 80%;
         margin: auto;
         border-radius: 10px 10px 0px 0px;
