--- a/src/pages/arvores/listarArvores/listaarvores.module.css
+++ b/src/pages/arvores/listarArvores/listaarvores.module.css
@@ -24,7 +24,7 @@
         margin: auto;
         font-family: var(--fontPadrao);
     }
-    
+
     .Editar{
         cursor: pointer;
         color: #55ACEE
@@ -41,7 +41,7 @@
         cursor: pointer;
         background-color: #FBECEA
     }
-    
+
     .icoEditar{
        
         color: #55ACEE
@@ -50,38 +50,36 @@
        
         color: #EE6755
     }
-    
+
     .Busca{
         width: 80%;
         margin: auto;
         margin-bottom: 20px;
     }
-     
+
     .headerTabela{
         background-color: #9ec69d;
         width: 80%;
         margin: auto;
         border-radius: 10px 10px 0px 0px;
     }
-    
+
     .DropMENU{
         margin-inline-start: auto;
         display: flex
     }
-    
-    .IconeMENU{
-        
+
+    .IconeMENU{   
         --bs-btn-bg: none;
         --bs-btn-border-color: none;
-        --bs-btn-hover-color: #55ACEE!important;
+        --bs-btn-hover-color: var(--secundaryTom1-color3)!important;
         background-color: transparent !important;
         color: none;
         --bs-btn-hover-color: none;
         --bs-btn-hover-bg: none;
     }
-    
+
     .IconeMENU2{
-        
         --bs-btn-bg: none;
         --bs-btn-border-color: none;
         --bs-btn-hover-color: #55ACEE!important;
@@ -91,15 +89,15 @@
         --bs-btn-hover-color: #000;
         --bs-btn-hover-bg: #000;
     }
-    
-    
+
+
     .IconeDrop{
         width: 20px;
         height: 20px;
         color: var(--secundaryTom1-color3);
         margin-right: 10px;
     }
-    
+
     .botaoCarregamento{
         display: block;
         width: 50%;
@@ -114,9 +112,9 @@
         display: flex;
         margin-left: 10%
     }
-    
-    
-    
+
+
+
     /* =================================Responsividade===================================== */
     @media (max-width: 800px) {
          
