--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -194,6 +194,10 @@
         display: flex;
         flex-wrap: wrap;
     }
+    .TituloArvore3{
+        font-size: 8rem;
+        font-weight: bolder;
+    }
 }
 
 
