--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -282,9 +282,49 @@
 .Sessao4{
     background-color:#e9e9e9;
     height: 200px;
+    /* display: flex; */
+    margin: auto;
+    justify-content: center;
 } 
+.DivSessao4{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
+.TituloSessao4{
+    margin: auto;
+    display: flex;
+}
 
-
+.Catego{
+    background-color: #fff;
+    border-radius: 100%;
+    width: 100px;
+    height: 100px;
+    justify-content: center;
+    text-align: center;
+    margin-left: 10px;
+    display: flex;
+    /* margin: auto; */
+    padding: 30px;
+    /* margin: auto; */
+    /* padding: 40px */
+}
+.CategoIco1{
+    width: 40px;
+    height: 40px;
+    color: #469444
+}
+.CategoIco2{
+    width: 40px;
+    height: 40px;
+    color: red
+}
+.CategoIco3 { 
+    width: 40px;
+    height: 40px;
+    color: blue
+}
 /* .floresImgHoje{
     height: 20vh;
     object-fit: cover;
