--- a/src/components/header/heade.module.css
+++ b/src/components/header/heade.module.css
@@ -225,3 +225,19 @@
         margin-left: -10px;
     }
 }
+
+.DivSpinnerLoadding{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #2b2a2a;
+    opacity: 0.4;
+    margin: auto; 
+    position: absolute;
+    top: 0px
+}
+.SpinnerLoadding{
+    display: flex;
+    margin: auto; 
+    position: absolute
+}
