--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -3,10 +3,12 @@
     background-color: #2F2F2F;
     display: flex;
     width: 100%;
-    height: 350px;
+    height: 290px;
     margin-bottom: 0px;
+    color: #fff;
 }
 .Titulo{
     color: white;
-    margin: auto 
+    margin: auto;
+    cursor: pointer
 }
