--- a/src/components/cards/cardArvore/cardArvore.module.css
+++ b/src/components/cards/cardArvore/cardArvore.module.css
@@ -26,11 +26,25 @@
 }
 .StatusCard{
     font-size: 12px;
-    width: 60px;
+    width: 80px;
     padding-top: 3px;
     padding-bottom: 3px;
     padding-left: 3px;
     background-color: green;
+    color: #fff;
+    justify-self: auto;
+    justify-content: auto;
+    justify-items: auto;
+   
+}
+
+.StatusCard2{
+    font-size: 12px;
+    width: 80px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 3px;
+    background-color: red;
     color: #fff;
     justify-self: auto;
     justify-content: auto;
