Atualiza versao responsivo cadastro local

--- a/src/components/cards/cardArvore/cardArvore.module.css
+++ b/src/components/cards/cardArvore/cardArvore.module.css
@@ -60,3 +60,12 @@
     object-fit: cover;
 
 }
+
+@media (max-width: 1211px) {
+    .Card{
+        width: 60%;
+        height: 10%;
+        margin: auto;
+        
+    }
+}
