--- a/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
+++ b/src/pages/locaisPlantacao/cadastrarLocal/cadlocais.module.css
@@ -21,3 +21,12 @@
     --bs-btn-hover-bg: #31662f;
     --bs-btn-hover-border-color: #31662f;
 }
+
+@media (max-width: 1211px) {
+    .cardArvore{
+        text-align: center;
+        width: 80vw;
+        margin: auto;
+        margin-top: 20px;
+    }
+}
