--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -1,3 +1,9 @@
+.divtitulo{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    
+}
 .divLocais{
     display: flex;
     flex-wrap: wrap;
