--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -3,18 +3,35 @@
     margin: auto;
     justify-content: center;
     
+    
 }
 .divLocais{
     display: flex;
     flex-wrap: wrap;
-    margin: auto
+    margin: auto;
+    
 }
 .cardLocais{
-    height: 200px;
-    width: 200px;
-    background-color: aquamarine;
-    display: flex;
+    height: 600px;
+    width: 400px;
+    background-color: honeydew;
+    /* display: flex; */
     margin: auto;
-    margin-top: 10px
+    margin-top: 15px;
+    box-shadow: 2px 2px 3px 3px #e5e5e5;
+    border-radius: 15px;
     
+}
+.divNome{
+    display: flex;
+    justify-content: center;
+}
+.imagemLocal{
+    width: 100%;
+    height: 40%;
+}
+
+.divDescricao{
+    font-size: 24px;
+    margin-left: 5px;
 }
