--- a/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
+++ b/src/pages/locaisPlantacao/listaLocais/listalocais.module.css
@@ -20,6 +20,7 @@
     margin-top: 15px;
     box-shadow: 2px 2px 3px 3px #e5e5e5;
     border-radius: 15px;
+    cursor: pointer;
     
 }
 .divNome{
